[fix #3320] Un-squish product images on /questions URLs. (#3324)
- Update product placeholder image to match new aspect ratio

--- a/kitsune/sumo/static/sumo/less/questions.less
+++ b/kitsune/sumo/static/sumo/less/questions.less
@@ -27,9 +27,15 @@ h2 {
     padding: 20px 30px;
   }
 
+  // product images are 484 x 244
   .logo-sprite {
-    background-position: 50% 50%;
     float: left;
+    height: auto;
+    width: 170px;
+  }
+
+  .title-description-wrapper {
+      margin-left: 180px;
   }
 
   .title {
@@ -38,12 +44,11 @@ h2 {
     font-size: 22px;
     letter-spacing: -1px;
     line-height: 22px;
-    margin: 0 0 12px 99px;
+    margin-bottom: 12px;
   }
 
   .description {
     display: block;
-    margin: 0 0 0 99px;
   }
 
   .no-image {
